// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots inputs/Button Disabled 1`] = `
.c0 {
  font-weight: 700;
  border: 0;
  border-radius: 3px;
  cursor: default;
  opacity: 0.5;
  display: inline-block;
  line-height: 1;
  font-size: 16px;
  padding: 12px 24px;
  background-color: #ffd700;
  color: #ffffff;
}

.c0:hover {
  opacity: 0.5;
}

<button
  className="c0"
  color="warning"
  disabled={true}
  onClick={[Function]}
  size="medium"
  type="button"
>
  Text
</button>
`;

exports[`Storyshots inputs/Button Large 1`] = `
.c0 {
  font-weight: 700;
  border: 0;
  border-radius: 3px;
  cursor: pointer;
  display: inline-block;
  line-height: 1;
  font-size: 18px;
  padding: 15px 32px;
  background-color: #1e90ff;
  color: #ffffff;
}

.c0:hover {
  opacity: 0.5;
}

<button
  className="c0"
  color="info"
  disabled={false}
  onClick={[Function]}
  size="large"
  type="button"
>
  Large
</button>
`;

exports[`Storyshots inputs/Button Outlined 1`] = `
.c0 {
  font-weight: 700;
  border: 1px;
  border-color: #ff6347;
  border-style: solid;
  border-radius: 3px;
  cursor: pointer;
  display: inline-block;
  line-height: 1;
  font-size: 16px;
  padding: 12px 24px;
  background-color: inherit;
  color: #ff6347;
}

.c0:hover {
  opacity: 0.5;
}

<button
  className="c0"
  color="error"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>
  Outline
</button>
`;

exports[`Storyshots inputs/Button Primary 1`] = `
.c0 {
  font-weight: 700;
  border: 0;
  border-radius: 3px;
  cursor: pointer;
  display: inline-block;
  line-height: 1;
  font-size: 16px;
  padding: 12px 24px;
  background-color: #263228;
  color: #ffffff;
}

.c0:hover {
  opacity: 0.5;
}

<button
  className="c0"
  color="primary"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>
  Primary
</button>
`;

exports[`Storyshots inputs/Button Secondary 1`] = `
.c0 {
  font-weight: 700;
  border: 0;
  border-radius: 3px;
  cursor: pointer;
  display: inline-block;
  line-height: 1;
  font-size: 16px;
  padding: 12px 24px;
  background-color: #2e7c31;
  color: #ffffff;
}

.c0:hover {
  opacity: 0.5;
}

<button
  className="c0"
  color="secondary"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>
  Secondary
</button>
`;

exports[`Storyshots inputs/Button Text 1`] = `
.c0 {
  font-weight: 700;
  border: 0;
  border-radius: 3px;
  cursor: pointer;
  display: inline-block;
  line-height: 1;
  font-size: 16px;
  padding: 12px 24px;
  background-color: inherit;
  color: #9c27b0;
}

.c0:hover {
  opacity: 0.5;
}

<button
  className="c0"
  color="purple"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>
  Text
</button>
`;
